change nodercms to ncms

--- a/public/themes/default/layout-default.hbs
+++ b/public/themes/default/layout-default.hbs
@@ -28,7 +28,7 @@
     <div class="jumbotron clear-bottom-margin">
       <div class="container text-center text-muted">
         {{{siteInfo.codeFooter}}}
-        <small>Powered by <a href="http://www.nodercms.com" title="轻量级CMS内容管理系统" target="_blank">NoderCMS</a></small>
+        <small>Powered by <a href="http://www.nodercms.com" title="轻量级CMS内容管理系统" target="_blank">ncms</a></small>
       </div>
     </div>
   </body>
