--- a/src/admin/views/install.view.html
+++ b/src/admin/views/install.view.html
@@ -8,17 +8,17 @@
         </div>
         <hr>
         <div class="well scrollable">
-          <p>感谢您选择 NoderCMS 产品。希望我们的努力能为您提供一个高效快速和强大的网站解决方案。</p>
-          <p>NoderCMS 全称为 NoderCMS 内容管理系统。
-          NoderCMS 内容管理系统的官方网站为 http://www.nodercms.com，是 NoderCMS 产品的开发商，依法独立拥有 NoderCMS 产品著作权。
-          NoderCMS 著作权受到法律和国际公约保护。使用者：无论个人或组织、盈利与否、用途如何（包括以学习和研究为目的），均需仔细阅读本协议，在理解、同意、并遵守本协议的全部条款后，方可开始使用 NoderCMS 软件。
-          本授权协议适用且仅适用于 NoderCMS 产品，NoderCMS所有方拥有对本授权协议的最终解释权。</p>
+          <p>感谢您选择 ncms 产品。希望我们的努力能为您提供一个高效快速和强大的网站解决方案。</p>
+          <p>ncms 全称为 ncms 内容管理系统。
+          ncms 内容管理系统的官方网站为 http://www.nodercms.com，是 ncms 产品的开发商，依法独立拥有 ncms 产品著作权。
+          ncms 著作权受到法律和国际公约保护。使用者：无论个人或组织、盈利与否、用途如何（包括以学习和研究为目的），均需仔细阅读本协议，在理解、同意、并遵守本协议的全部条款后，方可开始使用 ncms 软件。
+          本授权协议适用且仅适用于 ncms 产品，ncms所有方拥有对本授权协议的最终解释权。</p>
           <h4>协议许可的权利</h4>
           <p>您可以在完全遵守本最终用户授权协议的基础上，将本软件应用于个人、商业用途，而不必支付软件版权授权费用。
-          您可以在协议规定的约束和限制范围内修改 NoderCMS 源代码或界面风格以适应您的网站要求。
+          您可以在协议规定的约束和限制范围内修改 ncms 源代码或界面风格以适应您的网站要求。
           您拥有使用本软件构建的网站中全部资料、文章及相关信息的所有权，并独立承担与文章内容的相关法律义务。</p>
           <h4>协议规定的约束和限制</h4>
-          <p>Nodercms 使用开源协议 MIT 对代码进行了开源，使用本 NoderCMS 前，请确保遵守 MIT 协议</p>
+          <p>Nodercms 使用开源协议 MIT 对代码进行了开源，使用本 ncms 前，请确保遵守 MIT 协议</p>
         </div>
         <hr>
         <button ng-click="page = 'database'" type="button" class="btn btn-primary pull-right">我已阅读许可并同意</button>
@@ -160,7 +160,7 @@
           <div class="heading">安装完成</div>
         </div>
         <hr>
-        <h3 class="text-center text-welcome">欢迎使用 NoderCMS</h3>
+        <h3 class="text-center text-welcome">欢迎使用 ncms</h3>
         <h5 class="text-center text-muted">本软件为开源软件，项目的发展离不开你的支持，可以向作者打赏来鼓励一下作者 : )</h5>
         <br>
         <div class="row sponsor">
@@ -189,5 +189,5 @@
       </div>
     </div>
   </div>
-  <footer>Powered by <a href="http://www.nodercms.com" title="轻量级CMS内容管理系统" target="_blank">NoderCMS</a></footer>
+  <footer>Powered by <a href="http://www.nodercms.com" title="轻量级CMS内容管理系统" target="_blank">ncms</a></footer>
 </div>
