--- a/src/admin/views/main.view.html
+++ b/src/admin/views/main.view.html
@@ -7,7 +7,7 @@
         <h4 class="modal-title" id="sponsorModalTitle">打赏作者</h4>
       </div>
       <div class="modal-body">
-        <h3 class="text-center text-welcome">感谢您使用 NoderCMS</h3>
+        <h3 class="text-center text-welcome">感谢您使用 ncms</h3>
         <h5 class="text-center text-muted">本软件为开源软件，项目的发展离不开你的支持，可以向作者打赏来鼓励一下作者 : )</h5>
         <br>
         <div class="row sponsor">
@@ -55,7 +55,7 @@
             <div class="col-xs-4">
               <a href="http://www.nodercms.com" target="_blank">
                 <p><i class="fa fa-home fa-2x"></i></p>
-                <p>NoderCMS 官网</p>
+                <p>ncms 官网</p>
               </a>
             </div>
             <div class="col-xs-4">
