--- a/src/admin/views/sign-in.view.html
+++ b/src/admin/views/sign-in.view.html
@@ -30,6 +30,6 @@
         </form>
       </div>
     </div>
-    <div class="nodercms">Powered by <a href="http://www.nodercms.com" title="轻量级CMS内容管理系统" target="_blank">NoderCMS</a></div>
+    <div class="nodercms">Powered by <a href="http://www.nodercms.com" title="轻量级CMS内容管理系统" target="_blank">ncms</a></div>
   </div>
 </article>
