--- a/src/admin/views/main.view.html
+++ b/src/admin/views/main.view.html
@@ -4,7 +4,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="关闭"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="sponsorModalTitle">打赏作者</h4>
+        <h4 class="modal-title" id="sponsorModalTitle">捐献</h4>
       </div>
       <div class="modal-body">
         <h3 class="text-center text-welcome">感谢您使用 ncms</h3>
@@ -144,7 +144,7 @@
         </div>
       </div>
       <div class="panel panel-default">
-        <div class="panel-heading">打赏作者</div>
+        <div class="panel-heading">捐献</div>
         <div class="panel-body">
           <p>本软件为开源软件，项目的发展离不开你的支持，可以向作者打赏来鼓励一下作者 : )</p>
           <button data-toggle="modal" data-target="#sponsorModal" type="button" class="btn btn-default btn-block btn-sm">请作者吃饭</button>
